--- a/src/themes/nbeat-black/jquery.mobile.theme.less
+++ b/src/themes/nbeat-black/jquery.mobile.theme.less
@@ -159,20 +159,24 @@
 	.ui-li-bubble-left.ui-li-static {
 		// picked from 00_MessageBubble_BG_receive.png
 		background-color: #ddce7a;	
-		color: #000000;
-		.LESSbox-shadow(1px, 1px, 1px, #4d3a17);
+		.LESSbox-shadow(2px, 3px, 3px, #4d3a17);
+		color: #000000;	// 0 0 0
 	}
 	.ui-li-bubble-right.ui-li-static {
 		// picked from 00_MessageBubble_BG_sent.png
 		background-color: #c2d1da;
-		color: #606060;
-		.LESSbox-shadow(0px, 1px, 1px, #4d3a17);
+		.LESSbox-shadow(2px, 3px, 3px, #4d3a17);
+		color: #606060;	// 96 96 96
 	}
 	.ui-li-bubble-sos.ui-li-static {
-		color: #d30000;
+		color: #d30000;	// 211 0 0
+	}
+	.ui-li-bubble-date.ui-li-static {
+		background-color: #242b2c;	// 36 43 44
+		color: #39a6d7;	// 57 166 215
 	}
 	span.ui-li-bubble-time {
-		color: #39a6d7;
+		color: #39a6d7; // 57 166 215
 	}
 }
 
